@@ -31,6 +31,7 @@ import java.util.concurrent.atomic.AtomicInteger;
 
 import javax.management.MBeanServer;
 import javax.management.ObjectName;
+import javax.net.ssl.SSLHandshakeException;
 
 import com.google.common.annotations.VisibleForTesting;
 import com.google.common.base.Function;
@@ -1044,6 +1045,11 @@ public final class MessagingService implements MessagingServiceMBean
                 {
                     logger.trace("MessagingService server thread already closed");
                     break;
+                }
+                catch (SSLHandshakeException e)
+                {
+                    logger.warn("Could not initiate SSL connection with socket " + socket + " - check server config", e);
+                    FileUtils.closeQuietly(socket);
                 }
                 catch (IOException e)
                 {
