@@ -1,4 +1,5 @@
 3.2
+ * Add require_endpoint_verification opt for internode encryption (CASSANDRA-9220)
  * Abort in-progress queries that time out (CASSANDRA-7392)
  * Add transparent data encryption core classes (CASSANDRA-9945)
 
